remove unnecessary logic

--- a/lesson1/package.json
+++ b/lesson1/package.json
@@ -13,6 +13,7 @@
     "@types/node": "*",
     "antd": "^4.7.3",
     "craco-less": "^1.17.0",
+    "immer": "^9.0.12",
     "jexl": "^2.3.0",
     "ramda": "^0.28.0",
     "react": "^17.0.2",
